# magic-toolbox

./: Dockerfile  README.md  magic_toolbox_deployment.yaml  pyproject.toml
magic_toolbox/: api.py  client.py  models.py
ui/: ui.py
